--- a/sass/css/_publications.scss
+++ b/sass/css/_publications.scss
@@ -42,7 +42,7 @@
 }
 
 .pub-item {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid rgba(0,0,0,0.1);
 }
